--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint-autofix": "eslint . -c .eslintrc.js --ext .ts,.tsx --fix",
+    "prettify": "prettier --write \"./**/*.{ts,tsx}\""
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +52,16 @@
   },
   "devDependencies": {
     "@types/history": "^4.7.9",
-    "@types/react-router": "^5.1.16"
+    "@types/react-router": "^5.1.16",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "7.11.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-functional": "^3.7.2",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-sonarjs": "^0.10.0",
+    "prettier": "^2.4.1"
   }
 }
