--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_SPID_LOGIN=http://selfcare
+REACT_APP_SPID_LOGIN=/login
+REACT_APP_SPID_ONBOARDING=http://selfcare/onboarding
+REACT_APP_SPID_DASHBOARD=http://selfcare/dashboard
