--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-REACT_APP_SPID_LOGIN=/login
-REACT_APP_SPID_ONBOARDING=http://selfcare/onboarding
-REACT_APP_SPID_DASHBOARD=http://selfcare/dashboard
+REACT_APP_URL_FE_ONBOARDING=http://selfcare/onboarding
+REACT_APP_URL_FE_DASHBOARD=http://selfcare/dashboard
+
+REACT_APP_URL_API_LOGIN=http://selfcare/login
