--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+INLINE_RUNTIME_CHUNK=false
+
 REACT_APP_URL_FE_ONBOARDING=http://selfcare/onboarding
 REACT_APP_URL_FE_DASHBOARD=http://selfcare/dashboard
 
