--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -20,6 +20,14 @@ trigger:
       - main
       - release-*
 
+resources:
+  repositories:
+    - repository: pagopaCommons
+      type: github
+      name: pagopa/azure-pipeline-templates
+      ref: refs/tags/v14
+      endpoint: 'io-azure-devops-github-ro'
+
 # Execute agents (jobs) on latest Ubuntu version.
 # To change OS for a specific, ovverride "pool" attribute inside the job definition
 pool:
@@ -30,62 +38,48 @@ stages:
     dependsOn: []
     jobs:
       - job: make_build
-        pool:
-          vmImage: '$(vmImageNameDefault)'
         steps:
-          - template: azure-templates/setup-project.yml
-          - script: yarn build
-            workingDirectory: .
+          - template: templates/node-job-setup/template.yaml@pagopaCommons
+          - script: |
+              yarn build
             displayName: 'Build'
 
-  - stage: Static_Analysis
+  - stage: Static_analysis
     dependsOn: []
     jobs:
       - job: lint
         steps:
-          - template: azure-templates/setup-project.yml
-          - script: yarn lint
-            workingDirectory: .
+          - template: templates/node-job-setup/template.yaml@pagopaCommons
+          - script: |
+              yarn lint
             displayName: 'Lint'
+
       - job: danger
         condition: and(
           succeeded(),
           ne(variables['DANGER_GITHUB_API_TOKEN'], 'skip')
           )
         steps:
-          - template: azure-templates/setup-project.yml
+          - template: templates/node-job-setup/template.yaml@pagopaCommons
 
-          - bash: yarn danger ci
+          - bash: |
+              yarn danger ci
             env:
               DANGER_GITHUB_API_TOKEN: '$(DANGER_GITHUB_API_TOKEN)'
-            workingDirectory: .
             displayName: 'Danger CI'
+
   # B) Run unit tests if there is a push or pull request on any branch.
   - stage: Test
     dependsOn: []
     jobs:
       - job: unit_tests
         steps:
-          - template: azure-templates/setup-project.yml
+          - template: templates/node-job-setup/template.yaml@pagopaCommons
 
-          - script: yarn generate
-            workingDirectory: .
+          - script: |
+              yarn generate
             displayName: 'Generate definitions'
 
-          - script: yarn test:coverage
-            workingDirectory: .
+          - script: |
+              yarn test:coverage
             displayName: 'Unit tests exec'
-
-          - task: PublishTestResults@2
-            displayName: 'Publish test results from Jest tests'
-            inputs:
-              testResultsFormat: 'JUnit'
-              testResultsFiles: '**/junit.xml'
-              searchFolder: '$(System.DefaultWorkingDirectory)'
-              failTaskOnFailedTests: true
-
-          - task: PublishCodeCoverageResults@1
-            displayName: 'Publish code coverage from Jest tests'
-            inputs:
-              codeCoverageTool: Cobertura
-              summaryFileLocation: 'coverage/cobertura-coverage.xml'
