--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -39,6 +39,7 @@ stages:
     jobs:
       - job: make_build
         steps:
+          - template: ./azure-templates/setup-yarn-cache.yml
           - template: templates/node-job-setup/template.yaml@pagopaCommons
             parameters:
               nodeVersion: $(NODE_VERSION)
@@ -51,6 +52,7 @@ stages:
     jobs:
       - job: lint
         steps:
+          - template: ./azure-templates/setup-yarn-cache.yml
           - template: templates/node-job-setup/template.yaml@pagopaCommons
             parameters:
               nodeVersion: $(NODE_VERSION)
@@ -64,6 +66,7 @@ stages:
           ne(variables['DANGER_GITHUB_API_TOKEN'], 'skip')
           )
         steps:
+          - template: ./azure-templates/setup-yarn-cache.yml
           - template: templates/node-job-setup/template.yaml@pagopaCommons
             parameters:
               nodeVersion: $(NODE_VERSION)
@@ -80,6 +83,7 @@ stages:
     jobs:
       - job: unit_tests
         steps:
+          - template: ./azure-templates/setup-yarn-cache.yml
           - template: templates/node-job-setup/template.yaml@pagopaCommons
             parameters:
               nodeVersion: $(NODE_VERSION)
