--- a/.devops/azure-templates/setup-yarn-cache.yml
+++ b/.devops/azure-templates/setup-yarn-cache.yml
@@ -1,7 +1,7 @@
 steps:
   - task: Cache@2
     inputs:
-      key: '"yarn" | "$(Agent.OS)" | yarn.lock'
+      key: '"yarn" | "$(Agent.OS)" | $(Pipeline.Workspace)/yarn.lock'
       restoreKeys: |
         yarn | "$(Agent.OS)"
       path: '$(Pipeline.Workspace)/.yarn'
