--- a/.devops/azure-templates/setup-yarn-cache.yml
+++ b/.devops/azure-templates/setup-yarn-cache.yml
@@ -1,8 +1,6 @@
 steps:
   - task: Cache@2
     inputs:
-      key: '"yarn" | "$(Agent.OS)" | $(Build.Repository.LocalPath)/yarn.lock'
-      restoreKeys: |
-        yarn | "$(Agent.OS)"
+      key: '"yarn" | "$(Agent.OS)"
       path: '$(Pipeline.Workspace)/.yarn'
     displayName: Cache Yarn packages
