fixed bash env definition

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -114,13 +114,12 @@ stages:
               nodeVersion: $(NODE_VERSION)
           - bash: |
               yarn build
-            env: {
-              SPID_TEST_ENV_ENABLED='$(spid_test_env_enabled)'
-              INLINE_RUNTIME_CHUNK=false
+            env:
+              SPID_TEST_ENV_ENABLED: '$(spid_test_env_enabled)'
+              INLINE_RUNTIME_CHUNK: false
               REACT_APP_URL_FE_ONBOARDING:'$(react_app_url_fe_onboarding)'
               REACT_APP_URL_FE_DASHBOARD:'$(react_app_url_fe_dashboard)'
               REACT_APP_URL_API_LOGIN:'$(react_app_url_api_login)'
-            }
             displayName: 'Build files'
           - publish: $(System.DefaultWorkingDirectory)/build
             artifact: Bundle
