--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -135,7 +135,7 @@ stages:
   # Deploy bundle
   - stage: 'Deploy_to_${{ variables.environment }}'
     dependsOn:
-      - PreDeploy
+      - Prepare_artifact
     jobs:
       - job: 'Deploy_to_${{ variables.environment }}'
         steps:
