prepareArtifact run also if Release is skipped

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -111,8 +111,7 @@ stages:
 
   # Prepare Artifact with application bundle
   - stage: Prepare_artifact
-    dependsOn:
-      - Release
+    condition: succeeded()
     jobs:
       - job: 'make_build'
         steps:
