--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -148,7 +148,7 @@ stages:
               azureSubscription: '$(AZURE_SUBSCRIPTION)'
               scriptLocation: inlineScript
               inlineScript: |
-                az storage blob sync --container \$web --account-name $(storage_account) -s "$(Pipeline.Workspace)\Bundle" --destination '/auth/'
+                az storage blob sync --container \$web --account-name $(storage_account) -s "$(Pipeline.Workspace)/Bundle" --destination '/auth/'
 
           - task: AzureCLI@1
             displayName: 'Purge CDN endpoint'
