--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -150,7 +150,7 @@ stages:
               azureSubscription: '$(AZURE_SUBSCRIPTION)'
               scriptLocation: inlineScript
               inlineScript: |
-                az storage blob sync --container \$web --account-name $(storage_account) -s "$(Pipeline.Workspace)/Bundle" --destination '/$(basePath)/'
+                az storage blob sync --container \$web --account-name $(storage_account) -s "$(Pipeline.Workspace)/Bundle" --destination '$(basePath)/'
 
           - task: AzureCLI@1
             displayName: 'Purge CDN endpoint'
