--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -76,40 +76,42 @@ pool:
   vmImage: '$(vmImageNameDefault)'
 
 stages:
-  # Create a release
+  # Create a relase
   # Activated when ONE OF these are met:
-  # - is on branch main
+  # - is on branch $(DEFAULT_BRANCH)
   # - is a tag in the form v{version}-RELEASE
   - stage: Release
-    condition: and(
-      succeeded(),
+    condition:
       or(
-      eq(variables['Build.SourceBranch'], 'refs/heads/main'),
-      and(
-      startsWith(variables['Build.SourceBranch'], 'refs/tags'),
-      endsWith(variables['Build.SourceBranch'], '-RELEASE')
-      )
-      )
+        eq(variables['Build.SourceBranch'], format('refs/heads/{0}', variables.DEFAULT_BRANCH)),
+        and(
+          startsWith(variables['Build.SourceBranch'], 'refs/tags'),
+          endsWith(variables['Build.SourceBranch'], '-RELEASE')
+        )
       )
     pool:
       vmImage: 'ubuntu-latest'
     jobs:
       - job: make_release
+        condition: eq(variables['Build.SourceBranch'], format('refs/heads/{0}', variables.DEFAULT_BRANCH))
         steps:
-          - ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/main') }}:
-              - template: azure-templates/node-github-release.yaml
-                parameters:
-                  release_branch: 'main'
-                  project_folder: 'io-pay-portal-fe'
-                  semver: '${{ parameters.RELEASE_SEMVER }}'
-                  gitEmail: $(GIT_EMAIL)
-                  gitUsername: $(GIT_USERNAME)
-                  gitHubConnection: $(GITHUB_CONNECTION)
+          - template: templates/node-job-setup/template.yaml@pagopaCommons
+            parameters:
+              persistCredentials: true
+          - template: templates/node-github-release/template.yaml@pagopaCommons
+            parameters:
+              release_branch: '$(DEFAULT_BRANCH)'
+              semver: '${{ parameters.RELEASE_SEMVER }}'
+              gitEmail: '$(GIT_EMAIL)'
+              gitUsername: '$(GIT_USERNAME)'
+              gitHubConnection: '$(GITHUB_CONNECTION)'
 
-          - ${{ if ne(variables['Build.SourceBranch'], 'refs/heads/main') }}:
-              - script: |
-                  echo "We assume this reference to be a valid release: $(Build.SourceBranch). Therefore, there is no need to bundle a new release."
-                displayName: 'Skip release bundle'
+      - job: skip_release
+        condition: ne(variables['Build.SourceBranch'], format('refs/heads/{0}', variables.DEFAULT_BRANCH))
+        steps:
+          - script: |
+              echo "We assume this reference to be a valid release: $(Build.SourceBranch). Therefore, there is no need to bundle a new release."
+            displayName: 'Skip release bundle'
 
   # Prepare Artifact with application bundle
   - stage: Prepare_artifact
