--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
 INLINE_RUNTIME_CHUNK=false
 
+REACT_APP_SPID_TEST_ENV_ENABLED=true
+REACT_APP_SPID_CIE_ENTITY_ID=xx_servizicie_test
+
 REACT_APP_URL_FE_ONBOARDING=http://selfcare/onboarding
 REACT_APP_URL_FE_DASHBOARD=http://selfcare/dashboard
 
-REACT_APP_URL_API_LOGIN=http://selfcare/login
+REACT_APP_URL_API_LOGIN=http://selfcare/auth
