--- a/package.json
+++ b/package.json
@@ -66,5 +66,13 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-sonarjs": "^0.10.0",
     "prettier": "^2.4.1"
+  },
+  "jest": {
+    "coveragePathIgnorePatterns" : [
+      "src/index.tsx",
+      "src/reportWebVitals.ts",
+      "src/utils/constants.ts" ,
+      "src/utils/IDPS.ts" 
+    ]
   }
 }
