--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@ REACT_APP_SPID_CIE_ENTITY_ID=xx_servizicie_test
 
 REACT_APP_URL_FE_ONBOARDING=http://selfcare/onboarding
 REACT_APP_URL_FE_DASHBOARD=http://selfcare/dashboard
+REACT_APP_URL_FE_LANDING=http://selfcare/landing
 
 REACT_APP_URL_API_LOGIN=http://selfcare/auth
