--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fontsource/titillium-web": "^4.5.0",
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.2",
+    "@pagopa/mui-italia": "^0.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -68,11 +69,11 @@
     "prettier": "^2.4.1"
   },
   "jest": {
-    "coveragePathIgnorePatterns" : [
+    "coveragePathIgnorePatterns": [
       "src/index.tsx",
       "src/reportWebVitals.ts",
-      "src/utils/constants.ts" ,
-      "src/utils/IDPS.ts" 
+      "src/utils/constants.ts",
+      "src/utils/IDPS.ts"
     ]
   }
 }
