--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -137,6 +137,11 @@ stages:
               REACT_APP_URL_FE_ONBOARDING: '$(react_app_url_fe_onboarding)'
               REACT_APP_URL_FE_DASHBOARD: '$(react_app_url_fe_dashboard)'
               REACT_APP_URL_API_LOGIN: '$(react_app_url_api_login)'
+          - bash: |
+              printf "$EXECUTION_ID\n$(git name-rev --name-only FETCH_HEAD) $(git rev-parse HEAD)" > $(System.DefaultWorkingDirectory)/build/build.info
+            env:
+              EXECUTION_ID: '$(Build.BuildNumber) - $(Build.DefinitionName)($(Build.BuildId))'
+            displayName: 'Build info'
           - publish: $(System.DefaultWorkingDirectory)/build
             artifact: Bundle
 
