--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ REACT_APP_URL_FE_DASHBOARD=http://selfcare/dashboard
 REACT_APP_URL_FE_LANDING=http://selfcare/landing
 
 REACT_APP_URL_API_LOGIN=http://selfcare/auth
+
+REACT_APP_PAGOPA_HELP_EMAIL=user@domain.com
