--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ REACT_APP_URL_FE_LANDING=http://selfcare/landing
 
 REACT_APP_URL_API_LOGIN=http://selfcare/auth
 
-REACT_APP_PAGOPA_HELP_EMAIL=user@domain.com
+REACT_APP_PAGOPA_HELP_EMAIL=selfcare@assistenza.pagopa.it
