--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -31,6 +31,8 @@ variables:
     react_app_url_api_login: '$(UAT_REACT_APP_URL_API_LOGIN)'
     spid_test_env_enabled: 'true'
     spid_cie_entity_id: 'xx_servizicie_test'
+    react_app_url_file_informativa_privacy: '${UAT_REACT_APP_URL_FILE_INFORMATIVA_PRIVACY}'
+    react_app_url_file_termini_e_condizioni: '${UAT_REACT_APP_URL_FILE_TERMINI_E_CONDIZIONI}'
 
   ${{ elseif eq(variables['Build.SourceBranch'], 'refs/heads/main') }}:
     environment: 'PROD'
@@ -45,6 +47,8 @@ variables:
     react_app_url_api_login: '$(PROD_REACT_APP_URL_API_LOGIN)'
     spid_test_env_enabled: 'false'
     spid_cie_entity_id: 'xx_servizicie'
+    react_app_url_file_informativa_privacy: '${PROD_REACT_APP_URL_FILE_INFORMATIVA_PRIVACY}'
+    react_app_url_file_termini_e_condizioni: '${PROD_REACT_APP_URL_FILE_TERMINI_E_CONDIZIONI}'
 
   # every branch different from past will be considered as DEV
   #  ${{ if startsWith(variables['Build.SourceBranch'], 'refs/heads/release-dev') }}:
@@ -61,6 +65,8 @@ variables:
     react_app_url_api_login: '$(DEV_REACT_APP_URL_API_LOGIN)'
     spid_test_env_enabled: 'true'
     spid_cie_entity_id: 'xx_servizicie_test'
+    react_app_url_file_informativa_privacy: '${DEV_REACT_APP_URL_FILE_INFORMATIVA_PRIVACY}'
+    react_app_url_file_termini_e_condizioni: '${DEV_REACT_APP_URL_FILE_TERMINI_E_CONDIZIONI}'
 
 # Automatically triggered on PR
 # https://docs.microsoft.com/en-us/azure/devops/pipelines/yaml-schema?view=azure-devops&tabs=schema%2Cparameter-schema#pr-trigger
@@ -141,6 +147,8 @@ stages:
               REACT_APP_URL_FE_DASHBOARD: '$(react_app_url_fe_dashboard)'
               REACT_APP_URL_FE_LANDING: '$(react_app_url_fe_landing)'
               REACT_APP_URL_API_LOGIN: '$(react_app_url_api_login)'
+              REACT_APP_URL_FILE_INFORMATIVA_PRIVACY: '$(react_app_url_file_informativa_privacy)'
+              REACT_APP_URL_FILE_TERMINI_E_CONDIZIONI: '$(react_app_url_file_termini_e_condizioni)'
           - bash: |
               printf "$EXECUTION_ID\n$(git name-rev --name-only FETCH_HEAD) $(git rev-parse HEAD)" > $(System.DefaultWorkingDirectory)/build/build.info
             env:
