--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ REACT_APP_URL_FE_LANDING=http://selfcare/landing
 REACT_APP_URL_API_LOGIN=http://selfcare/auth
 
 REACT_APP_PAGOPA_HELP_EMAIL=selfcare@assistenza.pagopa.it
+
+REACT_APP_URL_FILE_INFORMATIVA_PRIVACY=https://dev.selfcare.pagopa.it/assets/InformativaPrivacy.pdf
+REACT_APP_URL_FILE_TERMINI_E_CONDIZIONI=https://dev.selfcare.pagopa.it/assets/tc.pdf
