--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ REACT_APP_PAGOPA_HELP_EMAIL=selfcare@assistenza.pagopa.it
 
 REACT_APP_URL_FILE_PRIVACY_DISCLAIMER=https://dev.selfcare.pagopa.it/assets/privacy-disclaimer.pdf
 REACT_APP_URL_FILE_TERMS_AND_CONDITIONS=https://dev.selfcare.pagopa.it/assets/terms-conditions.pdf
+
+REACT_APP_ENABLE_ASSISTANCE=true
