--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ REACT_APP_URL_FILE_PRIVACY_DISCLAIMER=https://dev.selfcare.pagopa.it/assets/priv
 REACT_APP_URL_FILE_TERMS_AND_CONDITIONS=https://dev.selfcare.pagopa.it/assets/terms-conditions.pdf
 
 REACT_APP_ENABLE_ASSISTANCE=true
+REACT_APP_PAGOPA_HELP_EMAIL=selfcare@assistenza.pagopa.it
