--- a/.env.development.local
+++ b/.env.development.local
@@ -7,5 +7,7 @@ REACT_APP_URL_FE_LANDING=http://selfcare/landing
 
 REACT_APP_URL_API_LOGIN=http://selfcare/auth
 
+REACT_APP_PAGOPA_HELP_EMAIL=assistenza@selfcare.it
+
 REACT_APP_URL_FILE_PRIVACY_DISCLAIMER=https://dev.selfcare.pagopa.it/assets/privacy-disclaimer.pdf
 REACT_APP_URL_FILE_TERMS_AND_CONDITIONS=https://dev.selfcare.pagopa.it/assets/terms-conditions.pdf
