--- a/.env.test.local
+++ b/.env.test.local
@@ -4,6 +4,7 @@ REACT_APP_SPID_CIE_ENTITY_ID=xx_servizicie_test
 REACT_APP_URL_FE_ONBOARDING=http://selfcare/onboarding
 REACT_APP_URL_FE_DASHBOARD=http://selfcare/dashboard
 REACT_APP_URL_FE_LANDING=http://selfcare/landing
+REACT_APP_URL_FE_ASSISTANCE=http://selfcare/assistance
 
 REACT_APP_URL_API_LOGIN=http://selfcare/auth
 
