--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -29,6 +29,11 @@ resources:
       name: pagopa/azure-pipeline-templates
       ref: refs/tags/v18
       endpoint: 'io-azure-devops-github-ro'
+    - repository: selfcareCommon
+      type: github
+      name: pagopa/selfcare-common-frontend
+      ref: refs/heads/main
+      endpoint: 'io-azure-devops-github-ro'
 
 # Execute agents (jobs) on latest Ubuntu version.
 # To change OS for a specific, ovverride "pool" attribute inside the job definition
@@ -41,7 +46,7 @@ stages:
     jobs:
       - job: make_build
         steps:
-          - template: ./azure-templates/setup-yarn-cache.yml
+          - template: .devops/azure-templates/setup-yarn-cache.yml@selfcareCommon
           - template: templates/node-job-setup/template.yaml@pagopaCommons
             parameters:
               nodeVersion: $(NODE_VERSION)
@@ -54,7 +59,7 @@ stages:
     jobs:
       - job: lint
         steps:
-          - template: ./azure-templates/setup-yarn-cache.yml
+          - template: .devops/azure-templates/setup-yarn-cache.yml@selfcareCommon
           - template: templates/node-job-setup/template.yaml@pagopaCommons
             parameters:
               nodeVersion: $(NODE_VERSION)
@@ -68,7 +73,7 @@ stages:
           ne(variables['DANGER_GITHUB_API_TOKEN'], 'skip')
           )
         steps:
-          - template: ./azure-templates/setup-yarn-cache.yml
+          - template: .devops/azure-templates/setup-yarn-cache.yml@selfcareCommon
           - template: templates/node-job-setup/template.yaml@pagopaCommons
             parameters:
               nodeVersion: $(NODE_VERSION)
@@ -85,7 +90,7 @@ stages:
     jobs:
       - job: unit_tests
         steps:
-          - template: ./azure-templates/setup-yarn-cache.yml
+          - template: .devops/azure-templates/setup-yarn-cache.yml@selfcareCommon
           - template: templates/node-job-setup/template.yaml@pagopaCommons
             parameters:
               nodeVersion: $(NODE_VERSION)
