--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -88,6 +88,11 @@ resources:
       name: pagopa/azure-pipeline-templates
       ref: refs/tags/v18
       endpoint: 'io-azure-devops-github-ro'
+    - repository: selfcareCommon
+      type: github
+      name: pagopa/selfcare-common-frontend
+      ref: refs/heads/main
+      endpoint: 'io-azure-devops-github-ro'
 
 pool:
   vmImage: '$(vmImageNameDefault)'
@@ -133,7 +138,7 @@ stages:
     jobs:
       - job: 'make_build'
         steps:
-          - template: ./azure-templates/setup-yarn-cache.yml
+          - template: .devops/azure-templates/setup-yarn-cache.yml@selfcareCommon
           - template: templates/node-job-setup/template.yaml@pagopaCommons
             parameters:
               nodeVersion: $(NODE_VERSION)
