SELC-144 - added mixpanel configuration

--- a/.env.test.local
+++ b/.env.test.local
@@ -12,3 +12,8 @@ REACT_APP_PAGOPA_HELP_EMAIL=assistenza@selfcare.it
 
 REACT_APP_URL_FILE_PRIVACY_DISCLAIMER=http://selfcare/assets/privacy-disclaimer.pdf
 REACT_APP_URL_FILE_TERMS_AND_CONDITIONS=http://selfcare/assets/terms-conditions.pdf
+
+REACT_APP_ANALYTICS_ENABLE=true
+REACT_APP_ANALYTICS_MOCK=true
+REACT_APP_ANALYTICS_DEBUG=false
+REACT_APP_MIXPANEL_TOKEN=DUMMY
