--- a/.env.development.local
+++ b/.env.development.local
@@ -12,3 +12,8 @@ REACT_APP_PAGOPA_HELP_EMAIL=assistenza@selfcare.it
 
 REACT_APP_URL_FILE_PRIVACY_DISCLAIMER=https://dev.selfcare.pagopa.it/assets/privacy-disclaimer.pdf
 REACT_APP_URL_FILE_TERMS_AND_CONDITIONS=https://dev.selfcare.pagopa.it/assets/terms-conditions.pdf
+
+REACT_APP_ANALYTICS_ENABLE=true
+REACT_APP_ANALYTICS_MOCK=false
+REACT_APP_ANALYTICS_DEBUG=true
+REACT_APP_MIXPANEL_TOKEN=4f822d97ff40c07fa55f594880d76396
