SELC-144 SELC-145 devops

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -38,6 +38,10 @@ variables:
     react_app_url_file_privacy_disclaimer: '${UAT_REACT_APP_URL_FILE_PRIVACY_DISCLAIMER}'
     react_app_url_file_terms_and_conditions: '${UAT_REACT_APP_URL_FILE_TERMS_AND_CONDITIONS}'
     react_app_enable_assistance: 'true'
+    react_app_analytics_enabled: '$(UAT_ANALYTICS_ENABLED)'
+    react_app_analytics_mocked: '$(UAT_ANALYTICS_MOCKED)'
+    react_app_mixpanel_token: '$(UAT_MIXPANEL_TOKEN)'
+    react_app_onetrust_domain_id: '$(UAT_ONETRUST_DOMAIN_ID)'
 
   ${{ elseif eq(variables['Build.SourceBranch'], 'refs/heads/main') }}:
     environment: 'PROD'
@@ -56,6 +60,11 @@ variables:
     react_app_url_file_privacy_disclaimer: '${PROD_REACT_APP_URL_FILE_PRIVACY_DISCLAIMER}'
     react_app_url_file_terms_and_conditions: '${PROD_REACT_APP_URL_FILE_TERMS_AND_CONDITIONS}'
     react_app_enable_assistance: 'false'
+    react_app_url_storage: '$(PROD_REACT_APP_URL_STORAGE)'
+    react_app_analytics_enabled: '$(PROD_ANALYTICS_ENABLED)'
+    react_app_analytics_mocked: '$(PROD_ANALYTICS_MOCKED)'
+    react_app_mixpanel_token: '$(PROD_MIXPANEL_TOKEN)'
+    react_app_onetrust_domain_id: '$(PROD_ONETRUST_DOMAIN_ID)'
 
   # every branch different from past will be considered as DEV
   #  ${{ if startsWith(variables['Build.SourceBranch'], 'refs/heads/release-dev') }}:
@@ -76,6 +85,11 @@ variables:
     react_app_url_file_privacy_disclaimer: '${DEV_REACT_APP_URL_FILE_PRIVACY_DISCLAIMER}'
     react_app_url_file_terms_and_conditions: '${DEV_REACT_APP_URL_FILE_TERMS_AND_CONDITIONS}'
     react_app_enable_assistance: 'true'
+    react_app_url_storage: '$(DEV_REACT_APP_URL_STORAGE)'
+    react_app_analytics_enabled: '$(DEV_ANALYTICS_ENABLED)'
+    react_app_analytics_mocked: '$(DEV_ANALYTICS_MOCKED)'
+    react_app_mixpanel_token: '$(DEV_MIXPANEL_TOKEN)'
+    react_app_onetrust_domain_id: '$(DEV_ONETRUST_DOMAIN_ID)'
 
 # Automatically triggered on PR
 # https://docs.microsoft.com/en-us/azure/devops/pipelines/yaml-schema?view=azure-devops&tabs=schema%2Cparameter-schema#pr-trigger
@@ -153,6 +167,7 @@ stages:
             displayName: 'Build files'
             env:
               INLINE_RUNTIME_CHUNK: 'false'
+              REACT_APP_ENV: '$(environment)'
               REACT_APP_SPID_TEST_ENV_ENABLED: '$(spid_test_env_enabled)'
               REACT_APP_SPID_CIE_ENTITY_ID: '$(spid_cie_entity_id)'
               REACT_APP_URL_FE_ONBOARDING: '$(react_app_url_fe_onboarding)'
@@ -164,9 +179,10 @@ stages:
               REACT_APP_URL_FILE_TERMS_AND_CONDITIONS: '$(react_app_url_file_terms_and_conditions)'
               REACT_APP_ENABLE_ASSISTANCE: '$(react_app_enable_assistance)'
               REACT_APP_PAGOPA_HELP_EMAIL: '$(react_app_pagopa_help_email)'
-              REACT_APP_ANALYTICS_ENABLE: true # TODO
-              REACT_APP_ANALYTICS_MOCK: true # TODO
-              REACT_APP_MIXPANEL_TOKEN: 'DUMMY' # TODO
+              REACT_APP_ANALYTICS_ENABLE: '$(react_app_analytics_enabled)'
+              REACT_APP_ANALYTICS_MOCK: '$(react_app_analytics_mocked)'
+              REACT_APP_MIXPANEL_TOKEN: '$(react_app_mixpanel_token)'
+              REACT_APP_ONETRUST_DOMAIN_ID: '$(react_app_onetrust_domain_id)'
           - bash: |
               printf "$EXECUTION_ID\n$(git name-rev --name-only FETCH_HEAD) $(git rev-parse HEAD)" > $(System.DefaultWorkingDirectory)/build/build.info
             env:
