--- a/.env.development.local
+++ b/.env.development.local
@@ -1,3 +1,5 @@
+REACT_APP_ENV=LOCAL_DEV
+
 REACT_APP_SPID_TEST_ENV_ENABLED=true
 REACT_APP_SPID_CIE_ENTITY_ID=xx_servizicie_test
 
@@ -13,7 +15,10 @@ REACT_APP_PAGOPA_HELP_EMAIL=assistenza@selfcare.it
 REACT_APP_URL_FILE_PRIVACY_DISCLAIMER=https://dev.selfcare.pagopa.it/assets/privacy-disclaimer.pdf
 REACT_APP_URL_FILE_TERMS_AND_CONDITIONS=https://dev.selfcare.pagopa.it/assets/terms-conditions.pdf
 
+
 REACT_APP_ANALYTICS_ENABLE=true
-REACT_APP_ANALYTICS_MOCK=false
-REACT_APP_ANALYTICS_DEBUG=true
-REACT_APP_MIXPANEL_TOKEN=4f822d97ff40c07fa55f594880d76396
+REACT_APP_ANALYTICS_MOCK=true
+REACT_APP_ANALYTICS_DEBUG=false
+REACT_APP_MIXPANEL_TOKEN=DUMMY
+REACT_APP_ONETRUST_DOMAIN_ID=c4394b6a-86ce-428c-a3d3-5b81cabbfed4-test
+# TODO fixme using selfcare domainId
