Dependabot/npm and yarn/follow redirects 1.14.8 (#71)
* Bump version to 0.4.1 [skip ci]

* Bump follow-redirects from 1.13.2 to 1.14.8

Bumps [follow-redirects](https://github.com/follow-redirects/follow-redirects) from 1.13.2 to 1.14.8.
- [Release notes](https://github.com/follow-redirects/follow-redirects/releases)
- [Commits](https://github.com/follow-redirects/follow-redirects/compare/v1.13.2...v1.14.8)

---
updated-dependencies:
- dependency-name: follow-redirects
  dependency-type: indirect
...

Signed-off-by: dependabot[bot] <support@github.com>

* version 1.0.0

Co-authored-by: pagopa-github-bot <>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: anttorre <antonio.torre@everis.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "self-care-login-frontend",
-  "version": "0.4.0",
+  "name": "selfcare-login-frontend",
+  "version": "1.0.0",
   "private": true,
   "homepage": "/auth/",
   "dependencies": {
