--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -35,8 +35,7 @@ variables:
     react_app_url_api_login: '$(UAT_REACT_APP_URL_API_LOGIN)'
     spid_test_env_enabled: 'true'
     spid_cie_entity_id: 'xx_servizicie_test'
-    react_app_url_file_privacy_disclaimer: '${UAT_REACT_APP_URL_FILE_PRIVACY_DISCLAIMER}'
-    react_app_url_file_terms_and_conditions: '${UAT_REACT_APP_URL_FILE_TERMS_AND_CONDITIONS}'
+    react_app_url_cdn: '${UAT_REACT_APP_URL_CDN}'
     react_app_enable_assistance: 'true'
     react_app_analytics_enabled: '$(UAT_ANALYTICS_ENABLED)'
     react_app_analytics_mocked: '$(UAT_ANALYTICS_MOCKED)'
@@ -57,10 +56,8 @@ variables:
     react_app_url_api_login: '$(PROD_REACT_APP_URL_API_LOGIN)'
     spid_test_env_enabled: 'false'
     spid_cie_entity_id: 'xx_servizicie'
-    react_app_url_file_privacy_disclaimer: '${PROD_REACT_APP_URL_FILE_PRIVACY_DISCLAIMER}'
-    react_app_url_file_terms_and_conditions: '${PROD_REACT_APP_URL_FILE_TERMS_AND_CONDITIONS}'
+    react_app_url_cdn: '${PROD_REACT_APP_URL_CDN}'
     react_app_enable_assistance: 'false'
-    react_app_url_storage: '$(PROD_REACT_APP_URL_STORAGE)'
     react_app_analytics_enabled: '$(PROD_ANALYTICS_ENABLED)'
     react_app_analytics_mocked: '$(PROD_ANALYTICS_MOCKED)'
     react_app_mixpanel_token: '$(PROD_MIXPANEL_TOKEN)'
@@ -82,10 +79,8 @@ variables:
     react_app_url_api_login: '$(DEV_REACT_APP_URL_API_LOGIN)'
     spid_test_env_enabled: 'true'
     spid_cie_entity_id: 'xx_servizicie_test'
-    react_app_url_file_privacy_disclaimer: '${DEV_REACT_APP_URL_FILE_PRIVACY_DISCLAIMER}'
-    react_app_url_file_terms_and_conditions: '${DEV_REACT_APP_URL_FILE_TERMS_AND_CONDITIONS}'
+    react_app_url_cdn: '${DEV_REACT_APP_URL_CDN}'
     react_app_enable_assistance: 'true'
-    react_app_url_storage: '$(DEV_REACT_APP_URL_STORAGE)'
     react_app_analytics_enabled: '$(DEV_ANALYTICS_ENABLED)'
     react_app_analytics_mocked: '$(DEV_ANALYTICS_MOCKED)'
     react_app_mixpanel_token: '$(DEV_MIXPANEL_TOKEN)'
@@ -175,8 +170,8 @@ stages:
               REACT_APP_URL_FE_LANDING: '$(react_app_url_fe_landing)'
               REACT_APP_URL_FE_ASSISTANCE: '$(react_app_url_fe_assistance)'
               REACT_APP_URL_API_LOGIN: '$(react_app_url_api_login)'
-              REACT_APP_URL_FILE_PRIVACY_DISCLAIMER: '$(react_app_url_file_privacy_disclaimer)'
-              REACT_APP_URL_FILE_TERMS_AND_CONDITIONS: '$(react_app_url_file_terms_and_conditions)'
+              REACT_APP_URL_FILE_PRIVACY_DISCLAIMER: '$(react_app_url_cdn)/assets/privacy-disclaimer.pdf'
+              REACT_APP_URL_FILE_TERMS_AND_CONDITIONS: '$(react_app_url_cdn)/assets/terms-conditions.pdf'
               REACT_APP_ENABLE_ASSISTANCE: '$(react_app_enable_assistance)'
               REACT_APP_PAGOPA_HELP_EMAIL: '$(react_app_pagopa_help_email)'
               REACT_APP_ANALYTICS_ENABLE: '$(react_app_analytics_enabled)'
