fixed devops react_app_url_cdn var

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -35,7 +35,7 @@ variables:
     react_app_url_api_login: '$(UAT_REACT_APP_URL_API_LOGIN)'
     spid_test_env_enabled: 'true'
     spid_cie_entity_id: 'xx_servizicie_test'
-    react_app_url_cdn: '${UAT_REACT_APP_URL_CDN}'
+    react_app_url_cdn: '$(UAT_REACT_APP_URL_CDN)'
     react_app_enable_assistance: 'true'
     react_app_analytics_enabled: '$(UAT_ANALYTICS_ENABLED)'
     react_app_analytics_mocked: '$(UAT_ANALYTICS_MOCKED)'
@@ -56,7 +56,7 @@ variables:
     react_app_url_api_login: '$(PROD_REACT_APP_URL_API_LOGIN)'
     spid_test_env_enabled: 'false'
     spid_cie_entity_id: 'xx_servizicie'
-    react_app_url_cdn: '${PROD_REACT_APP_URL_CDN}'
+    react_app_url_cdn: '$(PROD_REACT_APP_URL_CDN)'
     react_app_enable_assistance: 'false'
     react_app_analytics_enabled: '$(PROD_ANALYTICS_ENABLED)'
     react_app_analytics_mocked: '$(PROD_ANALYTICS_MOCKED)'
@@ -79,7 +79,7 @@ variables:
     react_app_url_api_login: '$(DEV_REACT_APP_URL_API_LOGIN)'
     spid_test_env_enabled: 'true'
     spid_cie_entity_id: 'xx_servizicie_test'
-    react_app_url_cdn: '${DEV_REACT_APP_URL_CDN}'
+    react_app_url_cdn: '$(DEV_REACT_APP_URL_CDN)'
     react_app_enable_assistance: 'true'
     react_app_analytics_enabled: '$(DEV_ANALYTICS_ENABLED)'
     react_app_analytics_mocked: '$(DEV_ANALYTICS_MOCKED)'
