--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "env-var": "^7.1.1",
+    "i18next": "^21.6.14",
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
     "react-datepicker": "^4.2.1",
