--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.2",
     "@pagopa/mui-italia": "pagopa/mui-italia",
-    "@pagopa/selfcare-common-frontend": "^1.5.13",
+    "@pagopa/selfcare-common-frontend": "^1.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -18,10 +18,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "env-var": "^7.1.1",
+    "i18next": "^21.6.14",
     "react": "^17.0.2",
     "react-app-polyfill": "^3.0.0",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.16.1",
     "react-router": "^5.2.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
