--- a/.env.development.local
+++ b/.env.development.local
@@ -1,5 +1,7 @@
 REACT_APP_ENV=LOCAL_DEV
 
+REACT_APP_URL_CDN=https://dev.selfcare.pagopa.it
+
 REACT_APP_SPID_TEST_ENV_ENABLED=true
 REACT_APP_SPID_CIE_ENTITY_ID=xx_servizicie_test
 
@@ -15,7 +17,7 @@ REACT_APP_PAGOPA_HELP_EMAIL=assistenza@selfcare.it
 REACT_APP_URL_FILE_PRIVACY_DISCLAIMER=https://dev.selfcare.pagopa.it/assets/privacy-disclaimer.pdf
 REACT_APP_URL_FILE_TERMS_AND_CONDITIONS=https://dev.selfcare.pagopa.it/assets/terms-conditions.pdf
 
-
+REACT_APP_ONE_TRUST_BASE_URL=https://cdn.cookielaw.org
 REACT_APP_ANALYTICS_ENABLE=true
 REACT_APP_ANALYTICS_MOCK=true
 REACT_APP_ANALYTICS_DEBUG=false
