--- a/.env.development.local
+++ b/.env.development.local
@@ -14,8 +14,8 @@ REACT_APP_URL_API_LOGIN=http://selfcare/auth
 
 REACT_APP_PAGOPA_HELP_EMAIL=assistenza@selfcare.it
 
-REACT_APP_URL_FILE_PRIVACY_DISCLAIMER=https://dev.selfcare.pagopa.it/assets/privacy-disclaimer.pdf
-REACT_APP_URL_FILE_TERMS_AND_CONDITIONS=https://dev.selfcare.pagopa.it/assets/terms-conditions.pdf
+REACT_APP_URL_FILE_PRIVACY_DISCLAIMER=https://www.pagopa.it/it/informativa-privacy-area-riservata
+REACT_APP_URL_FILE_TERMS_AND_CONDITIONS=https://www.pagopa.it/it/termini-condizioni-area-riservata
 
 REACT_APP_ONE_TRUST_BASE_URL=https://cdn.cookielaw.org
 REACT_APP_ANALYTICS_ENABLE=true
