--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.2",
-    "@pagopa/mui-italia": "pagopa/mui-italia",
+    "@pagopa/mui-italia": "^0.6.30",
     "@pagopa/selfcare-common-frontend": "^1.11.8",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
